# esg_mefali_v2

./: .cc-deps.json  .cc-orchestrator.md  .cc-queue.md  .env.example  .gitignore  .hermes-orchestrator.md  CLAUDE.md  Makefile  README.md  docker-compose.yml  fonctionnalites_ brainstorming copy.md  note.md
backend/: pyproject.toml  requirements.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_auth_rls.py  0003_source_table_and_unsourced_log.py  0004_audit_log_and_versioning.py  0005a_audit_purge_trigger_and_jobs.py  0005b_consent_table.py  0006_f06_demo_indicator.py  0007_sources_canonical_url.py  0008_catalog_fonds_offre.py  0009_f09_catalog.py  0010_f11_entreprise_enrich.py  0011_f13_chat_thread_message.py  0012_f12_projets_documents.py  0013_f18_chat_message_embedding_index.py  0014_f19_skill.py  0015_f22_document_entreprise.py  0016_f23_score_calculation.py  0017_f24_rapport_genere.py  0018_f28_carbon_footprint.py  0019_f29_credit.py  0020_f30_attestations.py  0021_f31_action_plan.py  0022_f33_url_patterns.py  0023_f34_notification.py  0024_f42_user_preferences.py  0025_f42_email_verified.py  0026_f50_documents_ui_extensions.py  0027_f50_document_tags.py  (+10 more)
backend/app/: config.py  db.py  embeddings_client.py  llm_client.py  main.py
backend/scripts/: __init__.py  audit_double_validation.sql  audit_unsourced_catalog.sql  cleanup_orphan_agent_runs.py  eval_agent.py  eval_jailbreak.py  seed_skills.py
backend/tests/: agent_fixtures.py  conftest.py  test_config.py  test_embeddings_client.py  test_health.py  test_llm_client.py  test_migration_idempotency.py  test_money_constraints.py  test_pgvector.py  test_schema.py
(+2215 files in other folders)
