[project]
name = "esg-mefali-backend"
version = "0.1.0"
description = "ESG Mefali — backend FastAPI (F01 foundations)"
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# E501 : gérée par ruff format. B008 : Depends() en default est idiomatique FastAPI.
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q --strict-markers"
markers = [
    "integration: tests requérant Postgres up (skip si DB indispo)",
]

[tool.coverage.run]
source = ["app"]
# Scripts CLI exécutés en CI/manuel, hors mesure unitaire.
omit = [
    "app/__init__.py",
    "app/scripts/audit_routes.py",
    "app/scripts/audit_logs.py",
    "app/scripts/audit_rls.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
